[package]
name = "nscldaq_ringtostdout"

version = "0.1.0"
edition = "2018"

description = "ringtostdout replacement in RUST that does not require an NSCLDAQ installation"

[[bin]]
name="ring2stdout"
path="./src/main.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nscldaq_ringbuffer = "0.6.0"
portman_client = "0.1.0"
proctitle = "0.1.1"
clap = "^2.27.1"