[package]
name = "nscldaq_ringtostdout"

version = "0.1.0"
edition = "2018"
#authors = "Ron Fox"
license = "GPL-3.0"
description = "Rust port of the ringtostdout NSCLDAQ application"
homepage = "http://docs.frib.msu.edu/daq"
repository="http://gitlab.msu.edu/foxr/nscldaq_ring2stdout.git"

description = "ringtostdout replacement in RUST that does not require an NSCLDAQ installation"

[[bin]]
name="ring2stdout"
path="./src/main.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nscldaq_ringbuffer = "0.6.0"
portman_client = "0.1.0"
proctitle = "0.1.1"
clap = "^2.27.1"